Fixed social page scrollbar bug

--- a/src/Social/Social.scss
+++ b/src/Social/Social.scss
@@ -1,7 +1,7 @@
 $navy: rgb(33, 35, 47);
 .social-container {
     min-height: 100vh;
-    width: calc(100vw - 18vw);
+    width: calc(100% - 18vw);
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
